force-app/main/default/objects/Contract/fields/Ad_serving_fee_included_in_the_bid__c.field-meta.xml
<CustomField>
    <fullName>Ad_serving_fee_included_in_the_bid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ad serving fee included in the bid</label>
    <type>Checkbox</type>
</CustomField>