force-app/main/default/objects/Contract/fields/Adform_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Adform_Legal_Entity__c</fullName>
    <label>Adform Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>