force-app/main/default/objects/Contract/fields/Adform_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Adform_Sales_Office__c</fullName>
    <formula>TEXT(CreatedBy.Office__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adform Sales Office</label>
    <type>Text</type>
</CustomField>