force-app/main/default/objects/Contract/fields/Adform_Sales_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Adform_Sales_Responsible__c</fullName>
    <formula>CreatedBy.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adform Sales Responsible</label>
    <type>Text</type>
</CustomField>