force-app/main/default/objects/Contract/fields/Adserving_Fee__c.field-meta.xml
<CustomField>
    <fullName>Adserving_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TPAS Prices will be applied for RTB placements</inlineHelpText>
    <label>Adserving Fee</label>
    <type>Checkbox</type>
</CustomField>