force-app/main/default/objects/Contract/fields/Adserving_Type__c.field-meta.xml
<CustomField>
    <fullName>Adserving_Type__c</fullName>
    <label>Adserving Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Tag Setting Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>