force-app/main/default/objects/Contract/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <label>Advertiser / Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>