force-app/main/default/objects/Contract/fields/Agreement_type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_type__c</fullName>
    <label>Agreement type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
                <default>true</default>
                <label>MSA</label>
            </value>
            <value>
                <fullName>BMSA</fullName>
            </value>
            <value>
                <fullName>VS</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
                <isActive>false</isActive>
                <label>PMP</label>
            </value>
            <value>
                <fullName>PSA</fullName>
                <isActive>false</isActive>
                <label>PSA</label>
            </value>
            <value>
                <fullName>RTB</fullName>
                <isActive>false</isActive>
                <label>RTB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>