force-app/main/default/objects/Contract/fields/Automated_Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>Automated_Guaranteed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Guaranteed</label>
    <type>Checkbox</type>
</CustomField>