force-app/main/default/objects/Contract/fields/Billing_contact_name_position__c.field-meta.xml
<CustomField>
    <fullName>Billing_contact_name_position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Billing contact name, position)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>