force-app/main/default/objects/Contract/fields/Client_Internal_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Internal_Order_Number__c</fullName>
    <label>Client Internal Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>