force-app/main/default/objects/Contract/fields/Client_Internal_Order_Number_Needed__c.field-meta.xml
<CustomField>
    <fullName>Client_Internal_Order_Number_Needed__c</fullName>
    <inlineHelpText>Select Yes, if it is required by client</inlineHelpText>
    <label>Client Internal Order Number Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>