force-app/main/default/objects/Contract/fields/Client_s_contact_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Client_s_contact_e_mail__c</fullName>
    <label>Client’s Contact e-mail</label>
    <type>Email</type>
</CustomField>