force-app/main/default/objects/Contract/fields/Client_s_contact_name__c.field-meta.xml
<CustomField>
    <fullName>Client_s_contact_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client’s Contact name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>