force-app/main/default/objects/Contract/fields/Client_with_MSA_PMSA__c.field-meta.xml
<CustomField>
    <fullName>Client_with_MSA_PMSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If client has already signed MSA or PMSA agreement with Adform then check the box</inlineHelpText>
    <label>Client with MSA / PMSA</label>
    <type>Checkbox</type>
</CustomField>