force-app/main/default/objects/Contract/fields/Contract_NavisionId_Account__c.field-meta.xml
<CustomField>
    <fullName>Contract_NavisionId_Account__c</fullName>
    <label>Contract NavisionId(Account)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>