force-app/main/default/objects/Contract/fields/Country_Group__c.field-meta.xml
<CustomField>
    <fullName>Country_Group__c</fullName>
    <label>Country Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>