force-app/main/default/objects/Contract/fields/CPM_for_booked_impressions__c.field-meta.xml
<CustomField>
    <fullName>CPM_for_booked_impressions__c</fullName>
    <label>CPM For Booked Impressions</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>