force-app/main/default/objects/Contract/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <formula>TEXT(Account.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer type</label>
    <type>Text</type>
</CustomField>