force-app/main/default/objects/Contract/fields/Design_mockup_is_signed_off__c.field-meta.xml
<CustomField>
    <fullName>Design_mockup_is_signed_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Mockup is Signed Off</label>
    <type>Checkbox</type>
</CustomField>