force-app/main/default/objects/Contract/fields/Doxis_Document__c.field-meta.xml
<CustomField>
    <fullName>Doxis_Document__c</fullName>
    <label>Doxis Document</label>
    <type>Url</type>
</CustomField>