force-app/main/default/objects/Contract/fields/Doxis_Id__c.field-meta.xml
<CustomField>
    <fullName>Doxis_Id__c</fullName>
    <label>Doxis Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>