force-app/main/default/objects/Contract/fields/Doxis_Request__c.field-meta.xml
<CustomField>
    <fullName>Doxis_Request__c</fullName>
    <label>Doxis Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>