force-app/main/default/objects/Contract/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <inlineHelpText>Select only 1st day of the month</inlineHelpText>
    <label>Effective date</label>
    <type>Date</type>
</CustomField>