force-app/main/default/objects/Contract/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>