force-app/main/default/objects/Contract/fields/Full_company_name__c.field-meta.xml
<CustomField>
    <fullName>Full_company_name__c</fullName>
    <label>Full company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>