force-app/main/default/objects/Contract/fields/Highest_Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Highest_Payment_Terms_Code__c</fullName>
    <label>Highest Payment Terms Code</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>