force-app/main/default/objects/Contract/fields/Invoice_details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_details__c</fullName>
    <label>Invoice details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minimal (agency level)</fullName>
            </value>
            <value>
                <fullName>Medium (end client level)</fullName>
            </value>
            <value>
                <fullName>Maximum (campaign level)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>