force-app/main/default/objects/Contract/fields/Invoice_level__c.field-meta.xml
<CustomField>
    <fullName>Invoice_level__c</fullName>
    <label>Invoice level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>End Client</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>