force-app/main/default/objects/Contract/fields/Invoicing_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_e_mail__c</fullName>
    <label>Client Invoicing E-mail</label>
    <type>Email</type>
</CustomField>