force-app/main/default/objects/Contract/fields/Invoicing_period__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_period__c</fullName>
    <defaultValue>&quot;monthly&quot;</defaultValue>
    <label>Invoicing Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>