force-app/main/default/objects/Contract/fields/Is_Approval_needed_Contract_prices__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_needed_Contract_prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval needed(Contract prices)</label>
    <type>Checkbox</type>
</CustomField>