force-app/main/default/objects/Contract/fields/Is_Approval_Needed_For_Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Needed_For_Payment_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Needed For Payment terms</label>
    <type>Checkbox</type>
</CustomField>