force-app/main/default/objects/Contract/fields/Is_HTML5_Rich_Media_included__c.field-meta.xml
<CustomField>
    <fullName>Is_HTML5_Rich_Media_included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HTML5 Rich Media included</label>
    <type>Checkbox</type>
</CustomField>