force-app/main/default/objects/Contract/fields/Items_to_approve__c.field-meta.xml
<CustomField>
    <fullName>Items_to_approve__c</fullName>
    <formula>HYPERLINK(&#39;apex/RC_ItemsToApprove?Id=&#39;&amp;Id, Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items to approve</label>
    <type>Text</type>
</CustomField>