force-app/main/default/objects/Contract/fields/Migration_Model__c.field-meta.xml
<CustomField>
    <fullName>Migration_Model__c</fullName>
    <label>Migration Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hybrid 1</fullName>
            </value>
            <value>
                <fullName>Hybrid 2</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Self-Serve​</fullName>
                <isActive>false</isActive>
                <label>Self-Serve​</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>