force-app/main/default/objects/Contract/fields/Monthly_Minimum_Services_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Minimum_Services_Fee__c</fullName>
    <defaultValue>CASE($User.Country_Group__c , 
&#39;UK&#39;, 1000, 
&#39;US&#39;,1000,
&#39;NO&#39;,9500,
&#39;BE&#39;, 1000,
&#39;DACH&#39;, 1500,
&#39;DK&#39;, 7500,
&#39;IT&#39;, 1000,
&#39;IB&#39;, 1000,
&#39;Baltics&#39;, 500,
&#39;Poland&#39;, 2000,
&#39;Czech Republic&#39;, 12500,
&#39;SE&#39;, 9800,
&#39;FI&#39;, 1000,
&#39;Turkey&#39;, 550,
&#39;NL&#39;, 1000,
&#39;FR&#39;, 1000,
0)</defaultValue>
    <inlineHelpText>Adform Monthly Minimum Service Fee which client agree to pay. This fee is charged once per a calendar quarter.</inlineHelpText>
    <label>Monthly Minimum Services Fee</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>