force-app/main/default/objects/Contract/fields/Number_of_ordered_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ordered_units__c</fullName>
    <label>Number Of Ordered Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>