force-app/main/default/objects/Contract/fields/Old_Contract__c.field-meta.xml
<CustomField>
    <fullName>Old_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>