force-app/main/default/objects/Contract/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>