force-app/main/default/objects/Contract/fields/Other_information_requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_information_requirements__c</fullName>
    <label>Other Information / Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>