force-app/main/default/objects/Contract/fields/Other_pricing_details__c.field-meta.xml
<CustomField>
    <fullName>Other_pricing_details__c</fullName>
    <label>Other Pricing Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>