force-app/main/default/objects/Contract/fields/Package_Size__c.field-meta.xml
<CustomField>
    <fullName>Package_Size__c</fullName>
    <label>Package Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S/M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>