force-app/main/default/objects/Contract/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Payment Terms (No. of days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>