force-app/main/default/objects/Contract/fields/Pre_payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_payment_Amount__c</fullName>
    <label>Pre-payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>