force-app/main/default/objects/Contract/fields/Price_for_creative_production__c.field-meta.xml
<CustomField>
    <fullName>Price_for_creative_production__c</fullName>
    <inlineHelpText>Amount of money for total Creative Production order. This amount will be used for billing purposes.</inlineHelpText>
    <label>Total Price For Creative Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>