force-app/main/default/objects/Contract/fields/Price_for_Reporting_Services__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Reporting_Services__c</fullName>
    <label>Price for Reporting Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>