force-app/main/default/objects/Contract/fields/Price_for_Trafficking_Services__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Trafficking_Services__c</fullName>
    <label>Price for Trafficking Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>