force-app/main/default/objects/Contract/fields/Price_Over_the_limit__c.field-meta.xml
<CustomField>
    <fullName>Price_Over_the_limit__c</fullName>
    <label>Price Over the limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>