force-app/main/default/objects/Contract/fields/Purchase_orders_PO_numbers__c.field-meta.xml
<CustomField>
    <fullName>Purchase_orders_PO_numbers__c</fullName>
    <inlineHelpText>Will the client send purchase orders or PO numbers</inlineHelpText>
    <label>Purchase orders / PO numbers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>