force-app/main/default/objects/Contract/fields/Rich_Media_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rich_Media_Rate__c</fullName>
    <label>Rich Media Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>