force-app/main/default/objects/Contract/fields/RTB_options__c.field-meta.xml
<CustomField>
    <fullName>RTB_options__c</fullName>
    <label>RTB options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Fee</fullName>
                <default>true</default>
                <label>Standard Fee</label>
            </value>
            <value>
                <fullName>Trading Desc Fee</fullName>
            </value>
            <value>
                <fullName>Trading Desc Fee + Included fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>