force-app/main/default/objects/Contract/fields/RTB_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>RTB_Payment_Terms__c</fullName>
    <label>RTB Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <default>true</default>
                <label>15</label>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>