force-app/main/default/objects/Contract/fields/RTB_Service_Fees_Included__c.field-meta.xml
<CustomField>
    <fullName>RTB_Service_Fees_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTB Service Fees(Included)</label>
    <type>Checkbox</type>
</CustomField>