force-app/main/default/objects/Contract/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Based on Activities (CPM, CPC)</fullName>
            </value>
            <value>
                <fullName>% of Adserving Cost</fullName>
            </value>
            <value>
                <fullName>% of Campaign Budget</fullName>
            </value>
            <value>
                <fullName>Fixed Fee for each Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>