force-app/main/default/objects/Contract/fields/Services_covered_By_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Services_covered_By_Fixed_Fee__c</fullName>
    <label>Services covered By Fixed Fee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Rich Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>