force-app/main/default/objects/Contract/fields/Services_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Services_Payment_Terms__c</fullName>
    <label>Services Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>