force-app/main/default/objects/Contract/fields/Supplement_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Type__c</fullName>
    <label>Supplement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>