force-app/main/default/objects/Contract/fields/Total_Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Minimum_Price__c</fullName>
    <label>Total Minimum Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>