force-app/main/default/objects/Contract/fields/Total_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Terms__c</fullName>
    <label>Total Payment Terms</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>