force-app/main/default/objects/Contract/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total price include all type of prices for related contract price record (Percent &amp; currency)</description>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>