force-app/main/default/objects/Contract/fields/TPAS_fee_on_RTB_form__c.field-meta.xml
<CustomField>
    <fullName>TPAS_fee_on_RTB_form__c</fullName>
    <label>TPAS fee on RTB form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Actual Budget Spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>