force-app/main/default/objects/Contract/fields/Trading_Desk_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trading_Desk_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trading Desk Fee</label>
    <type>Checkbox</type>
</CustomField>