force-app/main/default/objects/Contract/fields/VAT_number__c.field-meta.xml
<CustomField>
    <fullName>VAT_number__c</fullName>
    <label>VAT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>