force-app/main/default/objects/Contract/recordTypes/BMSA.recordType-meta.xml
<RecordType>
    <fullName>BMSA</fullName>
    <active>true</active>
    <description>TPAS, DSP and related services</description>
    <label>BMSA</label>
</RecordType>