force-app/main/default/objects/Contract/recordTypes/IO.recordType-meta.xml
<RecordType>
    <fullName>IO</fullName>
    <active>true</active>
    <description>Creative Production Order</description>
    <label>Creative Production Order</label>
</RecordType>