force-app/main/default/objects/Contract/recordTypes/Migration_Services_Addendum.recordType-meta.xml
<RecordType>
    <fullName>Migration_Services_Addendum</fullName>
    <active>true</active>
    <label>Migration Services Addendum</label>
</RecordType>