force-app/main/default/objects/Contract/validationRules/Client_internal_order_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_internal_order_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(ISPICKVAL( Client_Internal_Order_Number_Needed__c , &#39;Yes&#39;), true, false) ,Client_Internal_Order_Number__c = &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Client_Internal_Order_Number__c</errorDisplayField>
    <errorMessage>Client Internal Order Number is Required</errorMessage>
</ValidationRule>