force-app/main/default/objects/Contract/validationRules/Disable_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), $Profile.Name  != &#39;System Administrator&#39;, $Profile.Name  != &#39;Adform Billing User&#39;,ISPICKVAL(Status, &#39;Activated&#39;))</errorConditionFormula>
    <errorMessage>You cannot Edit contract when Contract Status Activated</errorMessage>
</ValidationRule>